<resources>
    <string name="app_name">AlarmManager</string>
    <string name="action_delete">Delete Alarms</string>
    <string name="image_desc"> </string>
    <string name="repeat">Repeat</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesdsay">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="setting_sound">Sound Settings</string>
    <string name="edit">Edit Time</string>
    <string name="alarm_text">Alarm Text</string>
    <string name="alarm_text_max">0/30</string>
    <string name="mark_all">Mark all</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm_mark">Alarm!</string>
</resources>
