<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alarm_area"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/alarm_status_icon"
            android:layout_width="@dimen/alarm_size"
            android:layout_height="@dimen/alarm_size"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_desc"
            android:foreground="@drawable/circle_selector"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_notifications_active_24px" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/edit"
                android:textColor="@color/textBlue"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alarm_repeate_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/alarm_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/image_desc"
            android:foreground="@drawable/circle_selector"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24px" />

    </LinearLayout>

    <!--setting area-->
    <LinearLayout
        android:id="@+id/alarm_setting_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/repeat_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textColor="@color/white"
            app:buttonTint="@color/white" />

        <LinearLayout
            android:id="@+id/repeat_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/monday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/monday" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/tuesday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/tuesday" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/wednesday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/wednesdsay" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/thursday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/thursday" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/friday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/friday" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/saturday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/saturday" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/sunday_btn"
                    style="@style/RepeatButtonStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_gravity="center"
                    android:background="@drawable/unselected_circle_drawable"
                    android:text="@string/sunday" />
            </FrameLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/alarm_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/rectangle_selector"
            android:text="@string/alarm_text"
            android:textColor="@color/colorGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="3dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/sound_setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="3dp"
            android:text="@string/setting_sound"
            android:foreground="@drawable/rectangle_selector"
            android:textColor="@color/textBlue"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>